--- a/app/src/main/res/layout/activity_tambah_anak.xml
+++ b/app/src/main/res/layout/activity_tambah_anak.xml
@@ -20,7 +20,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
-        android:hint="Umur" />
+        android:hint="Umur (Bulan)" />
 
     <EditText
         android:id="@+id/et_jenis_kelamin"
