--- a/app/src/main/res/layout/fragment_daftar_anak.xml
+++ b/app/src/main/res/layout/fragment_daftar_anak.xml
@@ -15,83 +15,17 @@
         android:background="@drawable/shape_orange"
         android:text="Tambahkan Daftar" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="5dp"
-        android:orientation="horizontal">
 
-        <TextView
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:text="@string/nama"
-            android:textColor="@color/dark"
-            android:textSize="18sp" />
-
-        <TextView
-            android:id="@+id/tv_nama_show"
+        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+            android:id="@+id/swipe"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="@color/dark"
-            android:textSize="18sp"
-            android:text="@string/nama" />
+            android:layout_height="match_parent">
 
-    </LinearLayout>
+            <ListView
+                android:id="@+id/rv_daftar_anak"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="5dp"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:text="Umur (Bulan)"
-            android:textColor="@color/dark"
-            android:textSize="18sp"/>
-
-        <TextView
-            android:id="@+id/tv_umur_show"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Umur"
-            android:textColor="@color/dark"
-            android:textSize="18sp"/>
-
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="5dp"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:text="Jenis Kelamin"
-            android:textColor="@color/dark"
-            android:textSize="18sp"/>
-
-        <TextView
-            android:id="@+id/tv_jk_show"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Jenis Kelamin"
-            android:textColor="@color/dark"
-            android:textSize="18sp"/>
-
-    </LinearLayout>
-<!--    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout-->
-<!--        android:id="@+id/swipe"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content">-->
-
-<!--        <androidx.recyclerview.widget.RecyclerView-->
-<!--            android:id="@+id/rv_daftar_anak"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="match_parent" />-->
-
-<!--    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>-->
+        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 </LinearLayout>
