--- a/app/src/main/res/layout/fragment_hitung_gizi.xml
+++ b/app/src/main/res/layout/fragment_hitung_gizi.xml
@@ -1,8 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_margin="16dp"
+    android:orientation="vertical"
     tools:context=".Fragment.HitungGiziFragment">
 
-</FrameLayout>
+    <EditText
+        android:id="@+id/et_bb"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="5dp"
+        android:hint="Berat Badan" />
+
+    <EditText
+        android:id="@+id/et_tb"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="5dp"
+        android:hint="Tinggi Badan" />
+
+    <Button
+        android:id="@+id/btn_hitung_imt"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="5dp"
+        android:background="@drawable/shape_orange"
+        android:text="Hitung Indeks Massa Tubuh" />
+
+    <View
+        android:layout_marginTop="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:background="@color/dark"/>
+
+    <TextView
+        android:id="@+id/tv_imt"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:textColor="@color/dark"
+        android:textAlignment="center"
+        android:textSize="18sp"
+        android:text="Hitung IMT (Indeks Massa Tubuh) Anak anda segera"
+        />
+
+</LinearLayout>
