--- a/app/src/main/res/layout/fragment_riwayat.xml
+++ b/app/src/main/res/layout/fragment_riwayat.xml
@@ -1,8 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding="16dp"
     tools:context=".Fragment.RiwayatFragment">
 
-</FrameLayout>
+    <EditText
+        android:id="@+id/et_nama_anak_gizi"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:hint="Nama Anak" />
+
+    <EditText
+        android:id="@+id/et_umur"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:hint="Umur (Bulan)" />
+
+    <EditText
+        android:id="@+id/et_jk"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:hint="Jenis Kelamin" />
+
+    <Button
+        android:id="@+id/btn_tambah_anak_gizi"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:background="@drawable/shape_orange"
+        android:text="Simpan Data" />
+
+</LinearLayout>
