--- a/app/src/main/res/layout/fragment_riwayat.xml
+++ b/app/src/main/res/layout/fragment_riwayat.xml
@@ -18,6 +18,7 @@
         android:id="@+id/et_umur"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:inputType="number"
         android:layout_margin="5dp"
         android:hint="Umur (Bulan)" />
 
